--- a/chart/helm-hello/values.yaml
+++ b/chart/helm-hello/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 replicaCount: 1
 image:
-  repository: osseu.azurecr.io/hello-helm
+  repository: levoacr02.azurecr.io/hello-helm
   tag: dev
   pullPolicy: IfNotPresent
 service:
